--- a/index.html
+++ b/index.html
@@ -3,240 +3,14 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <link href="assets/img/rpl.png" rel="icon" sizes="96x96" type="image/png"/>
-  <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&amp;display=swap" rel="stylesheet"/>
-  <title>
-   X RPL | Website
-  </title>
-  <style>
-   @keyframes gradientAnimation {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-        body {
-            font-family: Arial, Sans-Serif;
-            margin: 0px;
-            text-align: center;
-            height: 100vh;
-            background: linear-gradient(45deg, #000080, #202432, #000080);
-            background-size: 400% 400%;
-            animation: gradientAnimation 5s ease infinite;
-            color: white;
-        }
-        header {
-            background-color: #8a9ba8;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 2px solid #ffffff;
-        }
-        header .logo-container {
-            display: flex;
-            align-items: center;
-            margin-left: 20px;
-        }
-        header img {
-            height: 50px;
-            width: 50px;
-        }
-        header .logo-text {
-            font-size: 24px;
-            font-weight: bold;
-            margin-left: 10px;
-        }
-        header nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-weight: bold;
-        }
-        .gallery, .jadwal, .sosmed, footer {
-            text-align: center;
-            margin: 20px 0;
-        }
-        .gallery {
-            position: relative;
-            width: 100%;
-            max-width: 800px;
-            margin: auto;
-            overflow: hidden;
-        }
-        .gallery .image-container {
-            display: flex;
-            transition: transform 0.5s ease-in-out;
-        }
-        .gallery img {
-            width: 100%;
-            height: 400px;
-            object-fit: cover;
-            border-radius: 15px;
-        }
-        .gallery .prev, .gallery .next {
-            cursor: pointer;
-            position: absolute;
-            top: 50%;
-            width: auto;
-            padding: 16px;
-            margin-top: -22px;
-            color: white;
-            font-weight: bold;
-            font-size: 18px;
-            transition: 0.6s ease;
-            border-radius: 0 3px 3px 0;
-            user-select: none;
-        }
-        .gallery .prev {
-            left: 10px;
-        }
-        .gallery .next {
-            right: 10px;
-            border-radius: 3px 0 0 3px;
-        }
-        .gallery .prev:hover, .gallery .next:hover {
-            background-color: rgba(0,0,0,0.8);
-        }
-        .gallery .dots {
-            display: flex;
-            justify-content: center;
-            margin-top: 10px;
-        }
-        .gallery .dots span {
-            height: 10px;
-            width: 10px;
-            background-color: #ccc;
-            border-radius: 50%;
-            display: inline-block;
-            margin: 0 5px;
-            cursor: pointer;
-        }
-        .gallery .dots span.active {
-            background-color: #000;
-        }
-        .jadwal h2, .sosmed h2 {
-            font-size: 24px;
-            font-weight: bold;
-        }
-        .jadwal .section {
-            display: flex;
-            justify-content: center;
-            margin: 20px 0;
-            flex-wrap: wrap;
-        }
-        .jadwal .section div {
-            background-color: #d3d3d3;
-            border: 2px solid #000;
-            border-radius: 10px;
-            padding: 10px;
-            margin: 10px;
-            width: 150px;
-            text-align: left;
-            color: black;
-        }
-        .sosmed .social {
-            display: flex;
-            justify-content: center;
-            margin: 20px 0;
-        }
-        .sosmed .social div {
-            background-color: #d3d3d3;
-            border-radius: 10px;
-            padding: 20px;
-            margin: 0 10px;
-            width: 200px;
-            text-align: center;
-            color: black;
-        }
-        .sosmed .social div i {
-            font-size: 48px;
-            margin-bottom: 10px;
-        }
-        .divider {
-            border-top: 2px solid #ffffff;
-            margin: 20px 0;
-        }
-        footer {
-            background-color: #8a9ba8;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-top: 2px solid #000;
-            flex-wrap: wrap;
-        }
-        footer div {
-            text-align: center;
-            margin: 10px 5px;
-        }
-        footer .alamat {
-            display: flex;
-            align-items: center;
-            text-align: left;
-            margin-left: auto;
-            margin-right: 5px;
-            max-width: 300px;
-            word-wrap: break-word;
-        }
-        footer .alamat img {
-            margin-right: 10px;
-            height: 70px;
-            width: 70px;
-        }
-        footer .follow-us {
-            text-align: left;
-            margin: 0 auto;
-        }
-        footer .created-by {
-            text-align: left;
-            margin: 0 auto;
-        }
-        footer .created-by p:first-child {
-            font-weight: bold;
-        }
-        footer .follow-us p:first-child {
-            font-weight: bold;
-        }
-        footer .alamat p:first-child {
-            font-weight: bold;
-        }
-        footer div p {
-            margin: 5px 0;
-        }
-        footer div a {
-            color: white;
-            text-decoration: none;
-        }
-        footer .logo img {
-            height: 100px;
-            width: 100px;
-        }
-        footer .credits {
-            text-align: center;
-            width: 100%;
-            margin-top: 10px;
-            border-top: 2px solid #000;
-            padding-top: 10px;
-        }
-        @media (max-width: 768px) {
-            header nav {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-            header nav a {
-                margin: 5px 0;
-            }
-            .gallery .image-container {
-                justify-content: center;
-            }
-            .jadwal .section {
-                flex-direction: column;
-                align-items: center;
-            }
-        }
-  </style>
+  <link href="assets/style/styles.css" rel="stylesheet"/>
+  <title>X RPL | Website</title>
+  <meta property="og:site_name" content="X RPL | Website" />
+  <meta property="og:title" content="X RPL | Website" />
+  <meta property="og:url" content="https://erpeel24.vercel.app/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://erpeel24.vercel.app/assets/img/logorpl.png" />
+  <meta property="og:description" content="Welcome to X RPL | Website" />
  </head>
  <body>
   <header>
@@ -588,44 +362,6 @@
     </p>
    </div>
   </footer>
-  <script>
-   let slideIndex = 0;
-        const slides = document.querySelectorAll('.gallery .image-container img');
-        const dots = document.querySelectorAll('.gallery .dots span');
-
-        function showSlides(n) {
-            if (n >= slides.length) {
-                slideIndex = 0;
-            } else if (n < 0) {
-                slideIndex = slides.length - 1;
-            } else {
-                slideIndex = n;
-            }
-
-            slides.forEach((slide, index) => {
-                slide.style.display = index === slideIndex ? 'block' : 'none';
-            });
-
-            dots.forEach((dot, index) => {
-                dot.className = index === slideIndex ? 'active' : '';
-            });
-        }
-
-        function currentSlide(n) {
-            showSlides(n);
-        }
-
-        function nextSlide() {
-            showSlides(slideIndex + 1);
-        }
-
-        function prevSlide() {
-            showSlides(slideIndex - 1);
-        }
-
-        setInterval(nextSlide, 3000); // Change image every 3 seconds
-
-        showSlides(slideIndex);
-  </script>
+  <script src="assets/style/scripts.js"></script>
  </body>
 </html>
