--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <link href="assets/img/rpl.png" rel="icon" sizes="96x96" type="image/png"/>
+  <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&amp;display=swap" rel="stylesheet"/>
   <link href="assets/style/styles.css" rel="stylesheet"/>
   <title>X RPL | Website</title>
   <meta property="og:site_name" content="X RPL | Website" />
