--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="X RPL | Website" />
   <meta property="og:url" content="https://erpeel24.vercel.app/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://erpeel24.vercel.app/assets/img/logorpl.png" />
+  <meta property="og:image" content="https://erpeel24.vercel.app/assets/img/rpl.png" />
   <meta property="og:description" content="Welcome to X RPL | Website" />
  </head>
  <body>
@@ -314,12 +314,11 @@
     </p>
     <p>
      <a href="https://www.instagram.com/fhendy.hp/" target="_blank">
-      Fhenn
+      Fhendy
      </a>
     </p>
-    <p>
-     Ai :|
-    </p>
+    <p>&</p>
+    <p>Artificial<br>Intelligence</p>
    </div>
    <div class="follow-us">
     <p>
@@ -337,7 +336,7 @@
     </p>
    </div>
    <div class="alamat">
-    <img alt="Smk Mussi" src="assets/img/mussi.png" style="height: 70px; width: 70px;"/>
+    <img alt="Smk Mussi" src="assets/img/mussi.png" style="height: 90px; width: 90px;"/>
     <div>
      <p>
       ALAMAT
