--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <a href="#">
      GALLERY
     </a>
-    <a href="#jadwal">
-     JADWAL
+    <a href="#timetable">
+    TIMETABLE
     </a>
     <a href="#sosmed">
      ABOUT
@@ -67,9 +67,9 @@
   </div>
   <div class="divider">
   </div>
-  <div class="jadwal" id="jadwal">
+  <div class="jadwal" id="timetable">
    <h2>
-    JADWAL
+    TIMETABLE
    </h2>
    <h3>
     Mata Pelajaran
@@ -339,7 +339,7 @@
     <img alt="Smk Mussi" src="assets/img/mussi.png" style="height: 90px; width: 90px;"/>
     <div>
      <p>
-      ALAMAT
+    ADDRESS
      </p>
      <p>
       SMK MUHAMMADIYAH KESESI
